--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="">
-    <title></title>
+    <link rel="shortcut icon" href="https://i.postimg.cc/3rX10F6V/360-F-205478020-a-ISn-V8bu78-AMHElx-Nfxn4y-SYIf-Dg-IXhj.jpg">
+    <title>M.F Portfolio</title>
   </head>
   <body>
     <noscript>
